# FastWriterPro

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
assets/: Style.css  json.hpp
data_model/: model.cpp  model.h
headers/: autocompleteapp.h  hoverablebutton.h  inputfield.h  settingsdialog.h  trie.h  trienode.h
src/: autocompleteapp.cpp  hoverablebutton.cpp  inputfield.cpp  main.cpp  settingsdialog.cpp  trie.cpp  trienode.cpp
